<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SupCrowdfunder</string>
    <string name="action_settings">Settings</string>
    <string name="Index">Index</string>
    <string name="Category">Category</string>
    <string name="NewProject">New Project</string>
    <string name="Me">Me</string>
    <string name="title_activity_catrgory">CatrgoryActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="log">login</string>
    <string name="Reg">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title">Title</string>
    <string name="SayWhatUwant">Try to introduce your project!</string>
    <string name="price">The number of price</string>
    <string name="submit">Submit</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="donation">Donation</string>
    <string name="title_activity_donation">DonationActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="cancle">Cancle</string>
    <string name="ok">Ok</string>
    <string name="title_activity_category2">Category2Activity</string>

</resources>
